VR: Fix crash when fallback font is missing

BUG=715142

Review-Url: https://codereview.chromium.org/2836013004
Cr-Commit-Position: refs/heads/master@{#467033}

Former-commit-id: 7f2bb229d2728e932a8f50a881e792bfb803efc0